# Variable-Spacetime-Impedance

./: .cursorrules  .gemini_reply  .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  LIVING_REFERENCE.md  Makefile  README.md  TREE.txt  analytical_audit.md  audit.py  audit_assets.py  audit_logic.py  audit_results.txt  audit_results_v2.txt  build_book.sh  bulk_replace.py  cleanup_assets.py  debug_replace.py  fix_warnings.py  generate_assets.py  get_empirical.py  main.blg  main.tex  pyproject.toml  replace_terms.py  requirements.txt  setup.sh  setup_vsi.py  simulate_hydrogenic_atom.py  sweep.py  test_4s.py  test_beryllium_solve.py  test_fix_4s.py  test_ie_v3.py  test_j4s.py  test_j4s_num.py  test_k.py  test_k_trace.py  (+5 more)
archived_reference/: glossary.tex
build_future/: main.blg
chapters/: appendicies.tex  appendix_a.tex  appendix_b.tex  appendix_c.tex  appendix_code.tex  appendix_defense.tex  bibliography.bib  bibliography.tex  chapter1.tex  chapter2.tex  chapter3.tex  chapter4.tex  chapter5.tex  chapter6.tex  chapter7.tex  chapter8.tex  main.tex  setup.tex
docs/: INSTALLATION.md  README.md
experiments/: Makefile  build.sh  main.tex
future_work/: PONDER_01_BUILD_GUIDE.md  main.tex
manuscript/: bibliography.bib  main.tex  note.tex  refactor_manuscript.py  variables.tex
notebooks/: 00_template.ipynb  01_Relativistic_Limit.ipynb  01_getting_started.ipynb  02_CMB_BAO_Fitting.ipynb  03_Bullet_Cluster_Sim.ipynb  04_Vacuum_Energy.ipynb  05_Lepton_Asymmetry.ipynb  06_Superconductor_Vortex.ipynb  07_Quantum_Hall.ipynb  08_Gravitational_Waves.ipynb  (+2 more)
src/: constants.py  (+1 more)
(+1968 files in other folders)
